MDEV-25149 JSON_TABLE: Inconsistency in implicit data type conversion.

Only return the error if field->store produced errors, not warnings.